--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\manik\AppData\Local\Temp\testng-eclipse--1600120936\testng-customsuite.xml</span>
+                    <span>C:\Users\manik\AppData\Local\Temp\testng-eclipse-1881643659\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,24 +103,10 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="CucumberOptions.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Search Experience for product search in both home and Offers page&quot;, &quot;Search and Place the order of ...)">runScenario("Search Experience for product search in both home and Offers page", "Search and Place the order of ...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="CucumberOptions.FailedTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Search Experience for product search in both home and Offers page&quot;, &quot;Search and Place the order of ...)">runScenario("Search Experience for product search in both home and Offers page", "Search and Place the order of ...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="CucumberOptions.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Search Experience for product search in both home and Offers page&quot;, &quot;Search and Place the order of ...)">runScenario("Search Experience for product search in both home and Offers page", "Search and Place the order of ...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -135,7 +121,7 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">CucumberOptions.TestNGTestRunner</span>
+              <span class="class-name">CucumberOptions.FailedTestRunner</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -152,7 +138,7 @@
 	at org.testng.Assert.assertEquals(Assert.java:656)
 	at org.testng.Assert.assertEquals(Assert.java:666)
 	at stepDefinitions.OfferPageStepDefinition.User_search_with_same_shortname_in_offers_page(OfferPageStepDefinition.java:45)
-	at ✽.User search with Beet same shortname in offers page to check if product exist(file:///C:/Users/manik/eclipse-workspace/cucumberframework/src/test/java/featureFiles/searchProduct.feature:6)
+	at ✽.User search with Beet same shortname in offers page to check if product exist(file:///C:/Users/manik/eclipse-workspace/cucumberframework/src/test/java/featureFiles/searchProduct.feature:7)
 
 </div> <!-- stack-trace -->
                   <em>
@@ -161,28 +147,10 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-failed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">CucumberOptions.TestNGTestRunner</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Search Experience for product search in both home and Offers page&quot;, &quot;Search and Place the order of ...)">
-                  </a> <!-- runScenario("Search Experience for product search in both home and Offers page", "Search and Place the order of ...) -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Search Experience for product search in both home and Offers page","Search and Place the order of Products")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\manik\AppData\Local\Temp\testng-eclipse--1600120936\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\manik\AppData\Local\Temp\testng-eclipse-1881643659\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -191,7 +159,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;CucumberOptions.TestNGTestRunner&quot;/&gt;
+      &lt;class name=&quot;CucumberOptions.FailedTestRunner&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -239,20 +207,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'CucumberOptions.TestNGTestRunner')
-data.setCell(0, 3, 13955);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'CucumberOptions.TestNGTestRunner')
-data.setCell(1, 3, 13824);
+data.setCell(0, 2, 'CucumberOptions.FailedTestRunner')
+data.setCell(0, 3, 13871);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -278,24 +242,20 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">CucumberOptions.TestNGTestRunner</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">CucumberOptions.FailedTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@6b44435b)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@723ed581)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">runScenario("Search Experience for product search in both home and Offers page", "Search and Place the order of ...)</span>
-                <span class="method-start">414 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Search Experience for product search in both home and Offers page", "Search and Place the order of ...)</span>
-                <span class="method-start">414 ms</span>
+                <span class="method-start">1908 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">14377 ms</span>
+                <span class="method-start">15823 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
